karlserve package Changelog
===========================

Unreleased
----------

- The error page filter is no longer configured as it has been removed from 
  Karl. (LP #955307)

1.13 (2012-04-19)
-----------------

- repoze.who is now configured to use the basic challenger instead of the 
  redirform challenger. 

- Suppress warning in Pyramid > 1.1 about repoze.zodbconn using the request as
  a dict.


1.12 (2012-01-04)
-----------------

- IntegrityError is a retryable error. See lp:906958

1.11 (2011-12-29)
-----------------

- Refactoring to support UX2.

1.10 (2011-12-01)
-----------------

- Added configuration option, zodb.cache_size.

- Added configuration option, zodb.pool_size.

1.9 (2011-10-27)
----------------

- Pyramid updates

1.8 (2011-09-29)
----------------

- Added parse_dsn utility function.

1.7 (2011-08-25)
----------------

- Fix bug where repoze.retry wasn't being configured properly to catch
  sqlalchemy TransactionRollbackError.

- Added shell_pipe function to utils.

- Changed name of 'migrate' script to 'migrate_ini'.

1.6 (2011-08-04)
----------------

- Added 'psycopg2.extensions.TransactionRollbackError' to set of retryable
  exceptions for the 'repoze.retry' middleware.  (LP #811046)

1.5 (2011-07-14)
----------------

- If docid disappears during reindex, skip it.

1.4 (2011-06-30)
----------------

- Added 'group.KarlCommunications' to selectable groups. (LP #798415)

- Reindex texts now always refers to the catalog, rather than the previous
  index, when deciding which documents still need to be indexed.

1.3 (2011-06-23)
----------------

- The 'reindex_text' script can now be used to reindex text even if the index
  type is not changing.

- Added default value for 'envelope_from_addr' config parameter.  (LP #785267)

1.2 (2011-06-15)
----------------

- Refactored the 'use_pgtextindex' script into the 'reindex_text' script which
  can convert between text index types in both directions.  (LP #771956)
