@@ -164,10 +164,11 @@ port = 5678
 instances_ini_1 = """
 [instance:test1]
 zodb_uri = file://%(tmp)s/var/test1.db
+postoffice.zodb_uri = file://%(tmp)s/var/po1.db
 root = true
 
 [instance:test2]
 zodb_uri = file://%(tmp)s/var/test2.db
+postoffice.zodb_uri = file://%(tmp)s/var/po2.db?blobstorage_dir=file://%(tmp)s/var/po2_blobs
 pgtextindex.dsn = ho ho ho
 """
-
