@@ -7,6 +7,9 @@ Unreleased
 - The error page filter is no longer configured as it has been removed from 
   Karl. (LP #955307)
 
+- The postoffice database can now be accessed using ZODB's multi-database 
+  support. (LP #985546)
+
 1.13 (2012-04-19)
 -----------------
 
